# slog-notify

./: .travis.yml  Cargo.toml  README.md
examples/: notify_program_end.rs  simple.rs
src/: lib.rs
