[package]
name = "slog-notify"
version = "0.1.0"
authors = ["bjorn3 <bjorn3@users.noreply.github.com>"]
description = "Slog drain for desktop notifications"
keywords = ["slog", "notify"]
license = "MIT or Apache-2.0"
readme = "README.md"
repository = "https://github.com/bjorn3/slog-notify"

[dependencies]
slog = "1.5"
slog-term = "1.5"

notify-rust = "3.2"
