[package]
name = "slog-notify"
version = "0.2.0"
authors = ["bjorn3 <bjorn3@users.noreply.github.com>"]
description = "Slog drain for desktop notifications"
keywords = ["slog", "notify"]
license = "Apache-2.0" # or MIT
readme = "README.md"
repository = "https://github.com/bjorn3/slog-notify"

[dependencies]
slog = "2"
slog-term = "2"

notify-rust = "3.2"

[dev-dependencies]
slog-async = "2"
